# afterburner-vita

./: .gitignore  CMakeLists.txt  README.md
extras/livearea/: template.xml
extras/shader_cache/AFTBURCLI/: 1339AFB00B98FD8C.gxp  135695168D9A2B15.gxp  13D6CDC5A9D34DF4.gxp  1451104A48EE9DB1.gxp  15E8095EFC0A7120.gxp  160564310ADA823.gxp  16A899B6159FC300.gxp  1B457B1976CDAF.gxp  1BD90FDA794B4FB2.gxp  1D7599B5235A8034.gxp  2067BFE2B16F2B39.gxp  2251399693A90A6D.gxp  25A30FF266415FF5.gxp  25C45A5CCC194590.gxp  2BC46B7604AA8D92.gxp  302111A84C3458E.gxp  30B84C7D68F5D919.gxp  314B77BEA7A88734.gxp  322A7D2097663FF1.gxp  34003831BDDE6516.gxp  34B334B0E7BC9CA1.gxp  368255F121E06115.gxp  3AB43DB18531523.gxp  4172B28E063FF306.gxp  429C9E55B2D8335B.gxp  44492CFD46CE88DB.gxp  46B928E7943298CA.gxp  47A6D3C44C43A406.gxp  4840357AFC38C66.gxp  (+96 more)
lib/falso_jni/: FalsoJNI.c
lib/falso_ndk/: CMakeLists.txt  FalsoNDK.h  FalsoNDK_Utils.cpp  FalsoNDK_Utils.h  README.md
lib/falso_ndk/android/: AAssetManager.cpp  AConfiguration.cpp  AConfiguration.h  AInput.cpp  ALooper.cpp  ANativeActivity.cpp  ANativeActivity.h  ANativeWindow.cpp  ASensor.cpp  native_app_glue.h
lib/falso_ndk/linux/: fndk_epoll.cpp  fndk_epoll.h  fndk_eventfd.cpp  fndk_eventfd.h  fndk_pipe.cpp  fndk_pipe.h  fndk_unistd.cpp  fndk_unistd.h
lib/falso_ndk/shim/: fndk_controls.cpp  fndk_controls.h  fndk_sensors.cpp  fndk_sensors.h
lib/so_util/: so_util.c  so_util.h
source/: dynlib.c  falso_jni_impl.c  main.c  movie.c  patch.c
source/reimpl/: io.c  io.h  pthr.c
source/utils/: glutil.c  init.c  settings.c
